--- a/news.html
+++ b/news.html
@@ -10,26 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
-        #card {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-        }
 
-        /* Mobile  */
-        @media only screen and (max-width: 668px) {
-            #card {
-                grid-template-columns: repeat(1, 1fr);
-            }
-
-        }
-
-        /* Tablet */
-        @media only screen and (min-width: 669px) and (max-width: 992px) {
-            #card {
-                grid-template-columns: repeat(1, 1fr);
-            }
-        }
     </style>
 </head>
 
@@ -54,32 +35,12 @@
     </header>
     <!-- News Ctagories -->
     <section class="container">
-        <div id="ctagories" class="navbar bg-info">
+        <div id="ctagories" class=" d-lg-flex justify-content-around d-md-flex text-center">
 
         </div>
     </section>
     <!-- Card Section -->
-    <section class="container mt-5">
-        <div class="cards" id="card">
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
-                </div>
-                <div class="card-body">
-                    <div class="d-flex justify-content-around">
-                        <div><img src="#" alt="..."><span>Name</span></div>
-                        <i class="fa-regular fa-eye"></i>
-                        <i class="fa-solid fa-arrow-right"></i>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
+    <section class="container" id="card">
     </section>
 
 
