--- a/news.html
+++ b/news.html
@@ -40,7 +40,7 @@
         </div>
     </section>
     <!-- Card Section -->
-    <section class="container" id="card">
+    <section class="container mt-4" id="card">
     </section>
 
 
