--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,85 @@
 </head>
 
 <body>
+    <main>
+        <section class="container mb-5">
+            <div class="text-center me-lg-5 ms-lg-5 ps-lg-5 pe-lg-5 pt-5">
+                <h1>WellCome To Blog</h1>
+            </div>
 
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            What's the difference between var and let keywords in JavaScript?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            var and let are both used for variable declaration in javascript but the difference between
+                            them is that var is function scoped and let is block scoped. It can be said that a variable
+                            declared with var is defined throughout the program as compared to let.
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                What's the difference Between Regular Function and Arrow Function?
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Regular functions created using function declarations or expressions are constructible
+                                and
+                                callable. Since regular functions are constructible, they can be called using the new
+                                keyword. However, the arrow functions are only callable and not constructible, i.e arrow
+                                functions can never be used as constructor functions.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                What's the differences between forEach, map, filter, and find?
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                The main difference between this two methods is that forEach allows you to change
+                                elements
+                                of original array and returns undefined and map does not allow you to change original
+                                array
+                                and intended for making new array based on original one.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                what's the use of template string in javascript?
+                            </button>
+                        </h2>
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Template strings are a powerful feature of modern JavaScript released in ES6. It lets us
+                                insert/interpolate variables and expressions into strings without needing to concatenate
+                                like in older versions of JavaScript. It allows us to create strings that are complex
+                                and
+                                contain dynamic elements.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
 </body>
 
 </html>
