--- a/news.html
+++ b/news.html
@@ -43,6 +43,15 @@
 
         </div>
     </section>
+    <!-- Data Count -->
+    <section class="container" id="DataCount">
+    </section>
+    <!-- Loading Animation -->
+    <div class="text-center d-none" id="loader">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
     <!-- Card Section -->
     <section class="container mt-4" id="card">
     </section>
@@ -51,7 +60,14 @@
 
 
 
-
+    <!-- Footer -->
+    <footer>
+        <div class="bg-light">
+            <div class="text-center text-black-50 p-5">
+                <h6>CopyRight ©2022 Trending News</h6>
+            </div>
+        </div>
+    </footer>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
