--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,24 @@
 </head>
 
 <body>
+    <!-- Navigation Bar -->
+    <header>
+        <section class="mb-5 pt-5 container">
+            <nav class="navbar navbar fixed-top  navbar-expand-lg bg-light ">
+                <div class="container d-flex justify-content-between">
+                    <div>
+                        <a class="navbar-brand fs-2 fw-bold text-info">Trending News</a>
+                    </div>
+
+                    <div class="d-flex">
+                        <a class="navbar-brand  px-3" href="index.html">News</a>
+                        <a class="navbar-brand " href="blog.html">Blog</a>
+                    </div>
+                </div>
+            </nav>
+            <hr>
+        </section>
+    </header>
     <section class="container mb-5">
         <div class="accordion mt-5" id="accordionExample">
             <div class="accordion-item">
@@ -94,6 +112,7 @@
             </div>
         </div>
     </footer>
+
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
